RESOLVED FIXED25095
Scripts in the back/forward cache show in the Inspector when enabling the debugger
https://bugs.webkit.org/show_bug.cgi?id=25095
Summary Scripts in the back/forward cache show in the Inspector when enabling the deb...
Timothy Hatcher
Reported 2009-04-08 09:31:48 PDT
When enabling the debugger and all script functions are recompiled, the Inspector is told about source files for pages in the back/forward list in addition to the current page. Steps: 1) Visit a few pages that use JavaScript and build up a page history. 2) Open the Inspector on the last page and enable the debugger. Results: Notice the URLs of some of the scripts in the script menu are from pages in the history. Expected Results: Only scripts for the current page should show up.
Attachments
Timothy Hatcher
Comment 1 2009-04-10 13:00:43 PDT
Fixed in r42400.
Note You need to log in before you can comment on or make changes to this bug.