WebCore/bindings/js/ScriptCachedFrameData.cpp
@@ -50,6 +50,7 @@ ScriptCachedFrameData::ScriptCachedFrameData(Frame* frame)
     ScriptController* scriptController = frame->script();
     if (scriptController->haveWindowShell()) {
         m_window = scriptController->windowShell()->window();
+        scriptController->attachDebugger(0);
     }
 }
 
@@ -69,8 +70,7 @@ void ScriptCachedFrameData::restore(Frame* frame)
     JSLock lock(false);
 
     ScriptController* scriptController = frame->script();
-    if (scriptController->haveWindowShell()) {
-        JSDOMWindowShell* windowShell = scriptController->windowShell();
+    if (JSDOMWindowShell* windowShell = scriptController->windowShell()) {
         if (m_window) {
             windowShell->setWindow(m_window.get());
         } else {
